--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <div class="article-content">
                         <h3 class="article-title">Autariatus</h3>
                         <p class="article-excerpt">Server Owner</p>
-                        <a href="auta.html" class="article-link">Read more →</a>
+                        <a href="autariatus.html" class="article-link">Read more →</a>
                     </div>
                 </div>
                 
