--- a/index.html
+++ b/index.html
@@ -426,7 +426,30 @@
                         <a href="narget.html" class="article-link">Read more →</a>
                     </div>
                 </div>
-        </section>
+
+
+
+        <div class="article-card">
+            <div class="article-image">
+                <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#999" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <line x1="2" y1="12" x2="22" y2="12"></line>
+                    <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                </svg>
+            </div>
+            <div class="article-content">
+                <h3 class="article-title">Von</h3>
+                <p class="article-excerpt">Vril Edits and Memes Expert</p>
+                <a href="von.html" class="article-link">Read more →</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+        
    
         <footer class="footer">
             <div class="footer-content">
