--- a/autariatus.html
+++ b/autariatus.html
@@ -403,11 +403,13 @@
     <div id="ownership-takeover">
         <h3>Ownership Takeover <a href="#" class="edit-link">[edit]</a></h3>
         <p>Autariatus's rise to server ownership was nothing short of legendary. Having been an influential figure in the community for several months, his takeover in January 2025 came as a shock to many. His sudden acquisition was largely attributed to his persuasive and charismatic yet unsettling style, which earned him the loyalty of a large portion of the server population.<span class="footnote">[5]</span> Despite the controversies surrounding his leadership style, he managed to assume control and navigate the server into a new era of unprecedented growth.</p>
+        <p>One of the most significant events during his takeover was the <strong>Irina Incident</strong>, where a server-wide dispute erupted over a new member named Irina. Autariatus swiftly and decisively intervened, taking control of the situation with minimal effort, proving his ability to resolve crises quickly and maintain his authority over the community.</p>
     </div>
 
     <div id="chaotic-leadership">
         <h3>Chaotic Leadership <a href="#" class="edit-link">[edit]</a></h3>
         <p>Autariatus’s leadership is often described as chaotic but effective. His unorthodox strategies, ranging from random server-wide events to blackpilled philosophical discussions, have become the hallmark of his tenure as owner. While some members find his approach unsettling, it is undeniable that his methods have led to an increase in server activity and engagement.<span class="footnote">[6]</span></p>
+        <p>Autariatus’s leadership also came to prominence during the <strong>Eternal War</strong>, a factional conflict that divided the server into two main alliances. His ability to command respect and loyalty allowed him to keep the server united despite the internal chaos, further cementing his reputation as a leader in times of discord.</p>
     </div>
 </div>
 
