--- a/index.html
+++ b/index.html
@@ -493,6 +493,26 @@
                 title: 'Autariatus',
                 description: 'Owner',
                 url: 'autariatus.html'
+            },
+            {
+                title: 'Diony',
+                description: 'Member',
+                url: 'diony.html'
+            },
+            {
+                title: 'Narget',
+                description: 'unknown',
+                url: 'narget.html'
+            },
+             {
+                title: 'Von',
+                description: 'Member',
+                url: 'von.html'
+            },
+           {
+                title: 'Murrlani',
+                description: 'Head-Admin',
+                url: 'murrlani.html'
             }
         ];
         
