--- a/index.html
+++ b/index.html
@@ -457,6 +457,22 @@
             </div>
         </div>
 
+        
+                <div class="article-card">
+            <div class="article-image">
+                <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#999" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <line x1="2" y1="12" x2="22" y2="12"></line>
+                    <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                </svg>
+            </div>
+            <div class="article-content">
+                <h3 class="article-title">Bardhi</h3>
+                <p class="article-excerpt">Member</p>
+                <a href="bardhi.html.html" class="article-link">Read more →</a>
+            </div>
+        </div>
+
                 <div class="article-card">
             <div class="article-image">
                 <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#999" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -528,6 +544,11 @@
                 title: 'Murrlani',
                 description: 'Head-Admin',
                 url: 'murrlani.html'
+            },
+           {
+                title: 'Bardhi',
+                description: 'Member',
+                url: 'bardhi.html'
             }
         ];
         
