--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="article-content">
                 <h3 class="article-title">Bardhi</h3>
                 <p class="article-excerpt">Member</p>
-                <a href="bardhi.html.html" class="article-link">Read more →</a>
+                <a href="bardhi.html" class="article-link">Read more →</a>
             </div>
         </div>
 
