--- a/index.html
+++ b/index.html
@@ -502,6 +502,37 @@
                 <a href="malsori.html" class="article-link">Read more →</a>
             </div>
         </div>
+
+                                <div class="article-card">
+            <div class="article-image">
+                <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#999" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <line x1="2" y1="12" x2="22" y2="12"></line>
+                    <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                </svg>
+            </div>
+            <div class="article-content">
+                <h3 class="article-title">Gentius</h3>
+                <p class="article-excerpt">Member</p>
+                <a href="gentius.html" class="article-link">Read more →</a>
+            </div>
+        </div>
+
+                                <div class="article-card">
+            <div class="article-image">
+                <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#999" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <line x1="2" y1="12" x2="22" y2="12"></line>
+                    <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                </svg>
+            </div>
+            <div class="article-content">
+                <h3 class="article-title">Ozmos</h3>
+                <p class="article-excerpt">Member</p>
+                <a href="ozmos.html" class="article-link">Read more →</a>
+            </div>
+        </div>
+        
     </div>
 </section>
 
@@ -569,6 +600,16 @@
                 title: 'Malsori',
                 description: 'Member',
                 url: 'malsori.html'
+            },
+            {
+                title: 'Gentius',
+                description: 'Member',
+                url: 'gentius.html'
+            },
+            {
+                title: 'Ozmos',
+                description: 'Member',
+                url: 'ozmos.html'
             }
         ];
         
