--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,15 @@
             card.style.transition = 'opacity 0.5s ease, transform 0.5s ease';
             observer.observe(card);
         });
+
+            // Show main content after 3 seconds and hide loader
+    window.onload = function() {
+        setTimeout(function() {
+            // Hide the loader and show the main content
+            document.getElementById('loaderContainer').style.display = 'none';
+            document.getElementById('mainContent').style.display = 'block';
+        }, 3000); // 3000ms = 3 seconds
+    };
     </script>
 </body>
 </html>
